# xunit-struct

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: date_time.rs  errors.rs  lib.rs  model.rs  read_xml.rs
tests/data/: reference.xml
