[package]
name = "xunit-struct"
version = "0.1.0"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde-xml-rs = "*"
serde_json = "*"
log = "*"
simple_logger = "*"
chrono = "0.4"
thiserror = "1.0"